--- a/HTML/administrador-productos.html
+++ b/HTML/administrador-productos.html
@@ -9,7 +9,7 @@
       href="../imagenes/favicon.png"
       type="image/x-icon"
     />
-    <title>Coffe Shop</title>
+    <title>Productos</title>
   </head>
   <body>
     <table border="" id="container">
