--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,19 +22,13 @@
         <td id="categorias">
           <table>
             <tr>
-              <td>Café</td>
-            </tr>
-            <tr>
-              <td>Bebidas frías</td>
+              <td>Bebidas</td>
             </tr>
             <tr>
               <td>Panadería</td>
             </tr>
             <tr>
-              <td>Tortas</td>
-            </tr>
-            <tr>
-              <td>Salados</td>
+              <td>Repostería</td>
             </tr>
           </table>
         </td>
