menú de opciones modificada

--- a/HTML/administrador-formulario.html
+++ b/HTML/administrador-formulario.html
@@ -45,7 +45,19 @@
         </td>
       </tr>
       <tr>
-        <td id="opciones"></td>
+        <td id="opciones">
+          <table>
+            <tr>
+              <td id="elegido">Crear nuevo producto</td>
+            </tr>
+            <tr>
+              <td>Todos los productos</td>
+            </tr>
+            <tr>
+              <td>Ordenes pendientes</td>
+            </tr>
+          </table>
+        </td>
       </tr>
     </table>
   </body>
