--- a/HTML/administrador-ordenes.html
+++ b/HTML/administrador-ordenes.html
@@ -18,7 +18,19 @@
         <td rowspan="2" id="formulario"></td>
       </tr>
       <tr>
-        <td id="opciones"></td>
+        <td id="opciones">
+          <table>
+            <tr>
+              <td>Crear nuevo producto</td>
+            </tr>
+            <tr>
+              <td>Todos los productos</td>
+            </tr>
+            <tr>
+              <td id="elegido">Ordenes pendientes</td>
+            </tr>
+          </table>
+        </td>
       </tr>
     </table>
   </body>
