--- a/HTML/administrador-productos.html
+++ b/HTML/administrador-productos.html
@@ -18,7 +18,19 @@
         <td id="searchbar"></td>
       </tr>
       <tr>
-        <td id="opciones"></td>
+        <td id="opciones">
+          <table>
+            <tr>
+              <td>Crear nuevo producto</td>
+            </tr>
+            <tr>
+              <td id="elegido">Todos los productos</td>
+            </tr>
+            <tr>
+              <td>Ordenes pendientes</td>
+            </tr>
+          </table>
+        </td>
         <td id="contenido"></td>
       </tr>
     </table>
