links entre formulario, ordenes y productos

--- a/HTML/administrador-formulario.html
+++ b/HTML/administrador-formulario.html
@@ -12,7 +12,7 @@
     <title>Formulario</title>
   </head>
   <body>
-    <table border="" id="container">
+    <table id="container">
       <tr>
         <td id="logo"><img src="../imagenes/logo.png" alt="logo-cafe" /></td>
         <td rowspan="2" id="formulario">
@@ -51,10 +51,14 @@
               <td id="elegido">Crear nuevo producto</td>
             </tr>
             <tr>
-              <td>Todos los productos</td>
+              <td>
+                <a href="./administrador-productos.html">Todos los productos</a>
+              </td>
             </tr>
             <tr>
-              <td>Ordenes pendientes</td>
+              <td>
+                <a href="./administrador-ordenes.html">Ordenes pendientes</a>
+              </td>
             </tr>
           </table>
         </td>
