--- a/HTML/administrador-ordenes.html
+++ b/HTML/administrador-ordenes.html
@@ -12,7 +12,7 @@
     <title>Ordenes</title>
   </head>
   <body>
-    <table border="" id="container">
+    <table id="container">
       <tr>
         <td id="logo"><img src="../imagenes/logo.png" alt="logo-cafe" /></td>
         <td rowspan="2" id="formulario"></td>
@@ -21,10 +21,16 @@
         <td id="opciones">
           <table>
             <tr>
-              <td>Crear nuevo producto</td>
+              <td>
+                <a href="./administrador-formulario.html"
+                  >Crear nuevo producto</a
+                >
+              </td>
             </tr>
             <tr>
-              <td>Todos los productos</td>
+              <td>
+                <a href="./administrador-productos.html">Todos los productos</a>
+              </td>
             </tr>
             <tr>
               <td id="elegido">Ordenes pendientes</td>
