--- a/HTML/administrador-productos.html
+++ b/HTML/administrador-productos.html
@@ -12,7 +12,7 @@
     <title>Productos</title>
   </head>
   <body>
-    <table border="" id="container">
+    <table id="container">
       <tr>
         <td id="logo"><img src="../imagenes/logo.png" alt="logo-cafe" /></td>
         <td id="searchbar"></td>
@@ -21,13 +21,19 @@
         <td id="opciones">
           <table>
             <tr>
-              <td>Crear nuevo producto</td>
+              <td>
+                <a href="./administrador-formulario.html"
+                  >Crear nuevo producto</a
+                >
+              </td>
             </tr>
             <tr>
               <td id="elegido">Todos los productos</td>
             </tr>
             <tr>
-              <td>Ordenes pendientes</td>
+              <td>
+                <a href="./administrador-ordenes.html">Ordenes pendientes</a>
+              </td>
             </tr>
           </table>
         </td>
