modelado de cards hecho

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,7 +15,25 @@
     <table id="container">
       <tr>
         <td id="logo"><img src="../imagenes/logo.png" alt="logo-cafe" /></td>
-        <td id="menu" rowspan="2"></td>
+        <td id="menu" rowspan="2">
+          <div id="cards">
+            <div class="card">
+              <img src="../imagenes/espresso.jpg" alt="expresso" />
+              <h3>Expresso</h3>
+              <p>3.55$</p>
+            </div>
+            <div class="card">
+              <img src="../imagenes/espresso.jpg" alt="expresso" />
+              <h3>Expresso</h3>
+              <p>3.55$</p>
+            </div>
+            <div class="card">
+              <img src="../imagenes/espresso.jpg" alt="expresso" />
+              <h3>Expresso</h3>
+              <p>3.55$</p>
+            </div>
+          </div>
+        </td>
         <td id="carrito" rowspan="2">CARRITO DE COMPRAS</td>
       </tr>
       <tr>
