--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,6 +10,7 @@
       type="image/x-icon"
     />
     <title>Coffe Shop</title>
+    <script type="text/javascript" src="../JS/index.js"></script>
   </head>
   <body>
     <table id="container">
