--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,6 @@
       type="image/x-icon"
     />
     <title>Coffe Shop</title>
-    <script type="text/javascript" src="../JS/index.js"></script>
   </head>
   <body>
     <table id="container">
@@ -18,7 +17,7 @@
         <td id="logo"><img src="../imagenes/logo.png" alt="logo-cafe" /></td>
         <td id="menu" rowspan="2">
           <div id="cards">
-            <div class="card">
+            <!-- <div class="card">
               <img src="../imagenes/espresso.jpg" alt="expresso" />
               <h3>Expresso</h3>
               <p>3.55$</p>
@@ -27,12 +26,7 @@
               <img src="../imagenes/espresso.jpg" alt="expresso" />
               <h3>Expresso</h3>
               <p>3.55$</p>
-            </div>
-            <div class="card">
-              <img src="../imagenes/espresso.jpg" alt="expresso" />
-              <h3>Expresso</h3>
-              <p>3.55$</p>
-            </div>
+            </div> -->
           </div>
         </td>
         <td id="carrito" rowspan="2">CARRITO DE COMPRAS</td>
@@ -53,5 +47,6 @@
         </td>
       </tr>
     </table>
+    <script type="text/javascript" src="../JS/index.js"></script>
   </body>
 </html>
