scroll en el menú

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,16 +17,7 @@
         <td id="logo"><img src="../imagenes/logo.png" alt="logo-cafe" /></td>
         <td id="menu" rowspan="2">
           <div id="cards">
-            <!-- <div class="card">
-              <img src="../imagenes/espresso.jpg" alt="expresso" />
-              <h3>Expresso</h3>
-              <p>3.55$</p>
-            </div>
-            <div class="card">
-              <img src="../imagenes/espresso.jpg" alt="expresso" />
-              <h3>Expresso</h3>
-              <p>3.55$</p>
-            </div> -->
+            <!-- acá se renderizan las cards -->
           </div>
         </td>
         <td id="carrito" rowspan="2">CARRITO DE COMPRAS</td>
