--- a/HTML/index.html
+++ b/HTML/index.html
@@ -26,13 +26,28 @@
         <td id="categorias">
           <table>
             <tr>
-              <td>Bebidas</td>
+              <td>
+                <button id="todos" onclick="filtrar(this.id)">Todos</button>
+              </td>
             </tr>
             <tr>
-              <td>Panadería</td>
+              <td>
+                <button id="Bebidas" onclick="filtrar(this.id)">Bebidas</button>
+              </td>
             </tr>
             <tr>
-              <td>Repostería</td>
+              <td>
+                <button id="Panadería" onclick="filtrar(this.id)">
+                  Panadería
+                </button>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <button id="Repostería" onclick="filtrar(this.id)">
+                  Repostería
+                </button>
+              </td>
             </tr>
           </table>
         </td>
