carrito de compras empezado

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,7 +20,23 @@
             <!-- acá se renderizan las cards -->
           </div>
         </td>
-        <td id="carrito" rowspan="2">CARRITO DE COMPRAS</td>
+        <td id="carrito" rowspan="2">
+          <div id="productos">
+            <div>
+              <p>producto</p>
+              <p>precio$</p>
+            </div>
+            <div>
+              <p>producto</p>
+              <p>precio$</p>
+            </div>
+            <div>
+              <p>producto</p>
+              <p>precio$</p>
+            </div>
+          </div>
+          <button>COMPRAR</button>
+        </td>
       </tr>
       <tr>
         <td id="categorias">
