--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,18 +21,11 @@
           </div>
         </td>
         <td id="carrito" rowspan="2">
-          <div id="productos">
+          <div id="productos"></div>
+          <div id="total">
             <div>
-              <p>producto</p>
-              <p>precio$</p>
-            </div>
-            <div>
-              <p>producto</p>
-              <p>precio$</p>
-            </div>
-            <div>
-              <p>producto</p>
-              <p>precio$</p>
+              <p>Total</p>
+              <p>0$</p>
             </div>
           </div>
           <button>COMPRAR</button>
