realizar órdenes y dejarlas registradas con localstorage

--- a/HTML/administrador-ordenes.html
+++ b/HTML/administrador-ordenes.html
@@ -9,13 +9,16 @@
       href="../imagenes/favicon.png"
       type="image/x-icon"
     />
+
     <title>Ordenes</title>
   </head>
   <body>
     <table id="container">
       <tr>
         <td id="logo"><img src="../imagenes/logo.png" alt="logo-cafe" /></td>
-        <td rowspan="2" id="formulario"></td>
+        <td rowspan="2">
+          <div id="ordenes"></div>
+        </td>
       </tr>
       <tr>
         <td id="opciones">
@@ -39,5 +42,6 @@
         </td>
       </tr>
     </table>
+    <script type="text/javascript" src="../JS/index.js"></script>
   </body>
 </html>
