--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,18 +17,20 @@
         <td id="logo"><img src="../imagenes/logo.png" alt="logo-cafe" /></td>
         <td id="menu" rowspan="2">
           <div id="cards">
-            <!-- acá se renderizan las cards -->
+            <!-- acá se muestran las cards -->
           </div>
         </td>
         <td id="carrito" rowspan="2">
-          <div id="productos"></div>
+          <div id="productos">
+            <!-- acá se muestra el carrito -->
+          </div>
           <div id="total">
             <div>
               <p>Total</p>
               <p>0$</p>
             </div>
           </div>
-          <button>COMPRAR</button>
+          <button onclick="finalizarOrden()">COMPRAR</button>
         </td>
       </tr>
       <tr>
