estilos para la administración de productos casi terminada

--- a/HTML/administrador-productos.html
+++ b/HTML/administrador-productos.html
@@ -15,7 +15,15 @@
     <table id="container">
       <tr>
         <td id="logo"><img src="../imagenes/logo.png" alt="logo-cafe" /></td>
-        <td id="searchbar"></td>
+        <td id="searchbar">
+          <div>
+            <h1>Buscar producto</h1>
+            <span>
+              <input type="text" />
+              <button>Buscar</button>
+            </span>
+          </div>
+        </td>
       </tr>
       <tr>
         <td id="opciones">
@@ -37,8 +45,45 @@
             </tr>
           </table>
         </td>
-        <td id="contenido"></td>
+        <td id="contenido">
+          <h3>Productos:</h3>
+          <table id="tabla-productos">
+            <thead>
+              <tr>
+                <td>Id</td>
+                <td>Nombre</td>
+                <td>Precio</td>
+                <td>Categoría</td>
+                <td>Opción</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>algo</td>
+                <td>algo</td>
+                <td>algo</td>
+                <td>Eliminar</td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>algo</td>
+                <td>algo</td>
+                <td>algo</td>
+                <td>Eliminar</td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>algo</td>
+                <td>algo</td>
+                <td>algo</td>
+                <td>Eliminar</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
       </tr>
     </table>
+    <script type="text/javascript" src="../JS/index.js"></script>
   </body>
 </html>
