botón eliminar, con estilos, sin funcionalidad

--- a/HTML/administrador-productos.html
+++ b/HTML/administrador-productos.html
@@ -54,7 +54,7 @@
                 <td>Nombre</td>
                 <td>Precio</td>
                 <td>Categoría</td>
-                <td>Opción</td>
+                <td></td>
               </tr>
             </thead>
             <tbody>
@@ -63,21 +63,21 @@
                 <td>algo</td>
                 <td>algo</td>
                 <td>algo</td>
-                <td>Eliminar</td>
+                <td><button>Eliminar</button></td>
               </tr>
               <tr>
                 <td>1</td>
                 <td>algo</td>
                 <td>algo</td>
                 <td>algo</td>
-                <td>Eliminar</td>
+                <td><button>Eliminar</button></td>
               </tr>
               <tr>
                 <td>1</td>
                 <td>algo</td>
                 <td>algo</td>
                 <td>algo</td>
-                <td>Eliminar</td>
+                <td><button>Eliminar</button></td>
               </tr>
             </tbody>
           </table>
