--- a/HTML/administrador-productos.html
+++ b/HTML/administrador-productos.html
@@ -57,29 +57,7 @@
                 <td></td>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>algo</td>
-                <td>algo</td>
-                <td>algo</td>
-                <td><button>Eliminar</button></td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>algo</td>
-                <td>algo</td>
-                <td>algo</td>
-                <td><button>Eliminar</button></td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>algo</td>
-                <td>algo</td>
-                <td>algo</td>
-                <td><button>Eliminar</button></td>
-              </tr>
-            </tbody>
+            <tbody id="body-productos"></tbody>
           </table>
         </td>
       </tr>
