función para buscar productos terminada

--- a/HTML/administrador-productos.html
+++ b/HTML/administrador-productos.html
@@ -19,8 +19,8 @@
           <div>
             <h1>Buscar producto</h1>
             <span>
-              <input type="text" />
-              <button>Buscar</button>
+              <input type="text" name="buscar" id="buscar" />
+              <button id="btn-buscar" onclick="buscarProducto()">Buscar</button>
             </span>
           </div>
         </td>
