--- a/HTML/administrador-formulario.html
+++ b/HTML/administrador-formulario.html
@@ -16,30 +16,59 @@
       <tr>
         <td id="logo"><img src="../imagenes/logo.png" alt="logo-cafe" /></td>
         <td rowspan="2" id="formulario">
-          <form action="">
-            <div>
-              <label for="">Nombre:</label>
-              <br />
-              <input type="text" />
+          <form id="formulario-producto">
+            <h3>AGREGAR PRODUCTO</h3>
+            <div class="inputs">
+              <label for="nombre">Nombre:</label>
+              <input
+                type="text"
+                id="nombre"
+                name="nombre"
+                onfocus="inputfocus(this.id)"
+                onblur="inputblur(this.id)"
+                onchange="inputonchange(this.id)"
+              />
             </div>
-            <div>
-              <label for="">Precio:</label>
-              <br /><input type="number" />
+            <div class="inputs">
+              <label for="precio">Precio:</label>
+              <input
+                type="number"
+                id="precio"
+                name="precio"
+                onfocus="inputfocus(this.id)"
+                onblur="inputblur(this.id)"
+                onchange="inputonchange(this.id)"
+              />
             </div>
-            <div>
-              <label for="">Categoria:</label>
-              <br />
-              <select name="categorias" id="categorias">
+            <div class="inputs">
+              <label for="categoria">Categoria:</label>
+              <select
+                name="categorias"
+                id="categorias"
+                onfocus="inputfocus(this.id)"
+                onblur="inputblur(this.id)"
+                onchange="inputonchange(this.id)"
+              >
                 <option value="">-- --</option>
-                <option value="bebidas">Bebidas</option>
-                <option value="panaderia">Panadería</option>
-                <option value="reposteria">Repostería</option>
+                <option value="Bebidas">Bebidas</option>
+                <option value="Panadería">Panadería</option>
+                <option value="Repostería">Repostería</option>
               </select>
             </div>
-            <div>
-              <label for="">Imagen</label>
-              <br />
-              <input type="text" />
+            <div class="inputs">
+              <label for="imagen">Imagen(URL):</label>
+              <input
+                type="text"
+                id="imagen"
+                name="imagen"
+                onfocus="inputfocus(this.id)"
+                onblur="inputblur(this.id)"
+                onchange="inputonchange(this.id)"
+              />
+            </div>
+            <div id="botones">
+              <input type="reset" id="btn-reset" value="RESTABLECER" />
+              <input type="submit" id="btn-submit" value="CREAR" disabled />
             </div>
           </form>
         </td>
@@ -48,7 +77,7 @@
         <td id="opciones">
           <table>
             <tr>
-              <td id="elegido">Crear nuevo producto</td>
+              <td id="elegido">Agregar producto nuevo</td>
             </tr>
             <tr>
               <td>
