crear producto terminado

--- a/HTML/administrador-formulario.html
+++ b/HTML/administrador-formulario.html
@@ -44,7 +44,7 @@
               <label for="categoria">Categoria:</label>
               <select
                 name="categorias"
-                id="categorias"
+                id="categoria"
                 onfocus="inputfocus(this.id)"
                 onblur="inputblur(this.id)"
                 onchange="inputonchange(this.id)"
@@ -68,7 +68,7 @@
             </div>
             <div id="botones">
               <input type="reset" id="btn-reset" value="RESTABLECER" />
-              <input type="submit" id="btn-submit" value="CREAR" disabled />
+              <input type="submit" id="btn-submit" value="CREAR" />
             </div>
           </form>
         </td>
