lógica empezada para quitar producto del carrito

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,7 +30,7 @@
               <p>0$</p>
             </div>
           </div>
-          <button onclick="finalizarOrden()">COMPRAR</button>
+          <button id="btn-comprar" onclick="finalizarOrden()">COMPRAR</button>
         </td>
       </tr>
       <tr>
